--- a/Festival-App/Festival-App/Platform/Storyboards/Lineup.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/Lineup.storyboard
@@ -120,7 +120,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xyc-sb-GHr">
-                                                            <rect key="frame" x="160" y="76" width="0.0" height="0.0"/>
+                                                            <rect key="frame" x="160" y="84" width="200" height="0.0"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="22"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -129,12 +129,13 @@
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstItem="dRt-Tn-9bj" firstAttribute="centerY" secondItem="k0E-HG-Jye" secondAttribute="centerY" constant="-5" id="4Gr-1U-Ch6"/>
-                                                        <constraint firstItem="Xyc-sb-GHr" firstAttribute="top" secondItem="dRt-Tn-9bj" secondAttribute="bottom" id="I4Q-YJ-OzA"/>
+                                                        <constraint firstItem="Xyc-sb-GHr" firstAttribute="top" secondItem="dRt-Tn-9bj" secondAttribute="bottom" constant="8" id="I4Q-YJ-OzA"/>
                                                         <constraint firstItem="k0E-HG-Jye" firstAttribute="top" secondItem="ojd-ln-eC8" secondAttribute="topMargin" constant="8" id="Lfm-qp-qQv"/>
                                                         <constraint firstItem="dkr-9C-IgV" firstAttribute="top" secondItem="ojd-ln-eC8" secondAttribute="topMargin" constant="28" id="Xht-M1-tcf"/>
                                                         <constraint firstItem="k0E-HG-Jye" firstAttribute="leading" secondItem="ojd-ln-eC8" secondAttribute="leadingMargin" constant="10" id="cEh-yx-rgw"/>
                                                         <constraint firstItem="Xyc-sb-GHr" firstAttribute="leading" secondItem="k0E-HG-Jye" secondAttribute="trailing" constant="55" id="eoz-Wy-3Ce"/>
                                                         <constraint firstItem="dRt-Tn-9bj" firstAttribute="leading" secondItem="k0E-HG-Jye" secondAttribute="trailing" constant="65" id="ghP-YM-WNH"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Xyc-sb-GHr" secondAttribute="trailing" constant="15" id="mpT-Pu-35Z"/>
                                                         <constraint firstItem="dkr-9C-IgV" firstAttribute="leading" secondItem="k0E-HG-Jye" secondAttribute="trailing" constant="135" id="pLF-0S-3Db"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
@@ -165,10 +166,10 @@
                                                         </constraints>
                                                         <state key="normal" image="Main"/>
                                                         <connections>
-                                                            <action selector="onMainStagePressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="fwP-3R-81w"/>
+                                                            <action selector="onStageTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="a6V-SH-d6V"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frL-I8-itU">
+                                                    <button opaque="NO" alpha="0.29999999999999999" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frL-I8-itU">
                                                         <rect key="frame" x="35" y="0.0" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="KMA-GX-SUv"/>
@@ -176,10 +177,10 @@
                                                         </constraints>
                                                         <state key="normal" image="Resistance"/>
                                                         <connections>
-                                                            <action selector="onResistancePressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="31h-SW-tkl"/>
+                                                            <action selector="onStageTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="Q2d-5j-KZc"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gJg-90-5W4">
+                                                    <button opaque="NO" alpha="0.29999999999999999" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gJg-90-5W4">
                                                         <rect key="frame" x="70" y="0.0" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="30" id="kbv-FM-dMj"/>
@@ -187,10 +188,10 @@
                                                         </constraints>
                                                         <state key="normal" image="Live"/>
                                                         <connections>
-                                                            <action selector="onLivePressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="5ja-8j-kaS"/>
+                                                            <action selector="onStageTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="1U2-zM-YeQ"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vdz-C8-F0k">
+                                                    <button opaque="NO" alpha="0.29999999999999999" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vdz-C8-F0k">
                                                         <rect key="frame" x="105" y="0.0" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="30" id="bT4-dO-4So"/>
@@ -198,7 +199,7 @@
                                                         </constraints>
                                                         <state key="normal" image="Oasis"/>
                                                         <connections>
-                                                            <action selector="onOasisPressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="SzJ-L5-SQK"/>
+                                                            <action selector="onStageTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="Zi2-vn-qQy"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -215,10 +216,10 @@
                                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="23"/>
                                                         <state key="normal" title="1"/>
                                                         <connections>
-                                                            <action selector="onDayOnePressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="mOk-WO-42A"/>
+                                                            <action selector="onDayTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="wwz-Ys-258"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WTm-Pl-vzq">
+                                                    <button opaque="NO" alpha="0.29999999999999999" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WTm-Pl-vzq">
                                                         <rect key="frame" x="34" y="0.0" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="9ez-dD-mkx"/>
@@ -227,10 +228,10 @@
                                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="23"/>
                                                         <state key="normal" title="2"/>
                                                         <connections>
-                                                            <action selector="onDayTwoPressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="428-Zn-bGN"/>
+                                                            <action selector="onDayTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="IK1-9t-CAW"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fg2-x8-Oaj">
+                                                    <button opaque="NO" alpha="0.29999999999999999" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fg2-x8-Oaj">
                                                         <rect key="frame" x="68" y="0.0" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="iHT-x4-Jcx"/>
@@ -239,10 +240,10 @@
                                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="23"/>
                                                         <state key="normal" title="3"/>
                                                         <connections>
-                                                            <action selector="onDayThreePressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="4VO-IM-PxG"/>
+                                                            <action selector="onDayTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="s8I-w4-sT7"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CE1-MA-JQY">
+                                                    <button opaque="NO" alpha="0.29999999999999999" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CE1-MA-JQY">
                                                         <rect key="frame" x="102" y="0.0" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="9EJ-T5-zes"/>
@@ -251,7 +252,7 @@
                                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="23"/>
                                                         <state key="normal" title="4"/>
                                                         <connections>
-                                                            <action selector="onDayFourPressed:" destination="O6W-XD-lSn" eventType="touchUpInside" id="wen-GX-4dW"/>
+                                                            <action selector="onDayTapped:" destination="O6W-XD-lSn" eventType="touchUpInside" id="4JV-ir-fYL"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
