--- a/Festival-App/Festival-App/Platform/Storyboards/Lineup.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/Lineup.storyboard
@@ -111,6 +111,9 @@
                                                                 <constraint firstAttribute="width" constant="30" id="s4Z-GC-jlL"/>
                                                             </constraints>
                                                             <state key="normal" image="addChannelButton"/>
+                                                            <connections>
+                                                                <action selector="onAddTapped:" destination="cpv-97-LiV" eventType="touchUpInside" id="k7I-hE-sYE"/>
+                                                            </connections>
                                                         </button>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k0E-HG-Jye" customClass="CircleImage" customModule="Festival_App" customModuleProvider="target">
                                                             <rect key="frame" x="25" y="19" width="80" height="80"/>
